[gd_scene load_steps=32 format=3 uid="uid://wpjcy16hnucs"]

[ext_resource type="Script" path="res://src/ems/scripts/main.gd" id="1_2g2dt"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="2_c4kmf"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="3_52hyq"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="3_63v2b"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="4_8ewl6"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="6_edw0r"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="6_qhtc8"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="7_2dyd7"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="8_5rd78"]
[ext_resource type="Script" path="res://src/ems/scripts/Area3D.gd" id="8_6njb4"]
[ext_resource type="PackedScene" uid="uid://cpvjxbpdponc6" path="res://src/ems/scenes/screen.tscn" id="9_b1ux2"]
[ext_resource type="PackedScene" uid="uid://cs4em168r5iv5" path="res://src/ems/blenderobjects/minecraftSteve.blend" id="11_iiidb"]
[ext_resource type="PackedScene" uid="uid://cw6xpwjimqe32" path="res://src/ems/blenderobjects/room.blend" id="14_50kk4"]
[ext_resource type="Script" path="res://src/ems/scripts/roomOpener.gd" id="15_33m2j"]
[ext_resource type="PackedScene" uid="uid://dmxa2gipbkf10" path="res://src/ems/scenes/colorcube.tscn" id="16_8ceiq"]
[ext_resource type="PackedScene" uid="uid://dpi1uvrrd6yax" path="res://src/ems/scenes/ColorLock.tscn" id="16_jctg4"]
[ext_resource type="PackedScene" uid="uid://bk57pwt40hk4q" path="res://src/ems/blenderobjects/Rag.blend" id="17_vdcp1"]

[sub_resource type="Environment" id="Environment_7m1n5"]

[sub_resource type="PlaneMesh" id="PlaneMesh_kfrc4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f3c2q"]
size = Vector3(2.00005, 1, 1.99986)

[sub_resource type="BoxMesh" id="BoxMesh_gcbew"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0qee3"]
albedo_color = Color(0.294118, 0.733333, 0.509804, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_vuiey"]

[sub_resource type="PlaneMesh" id="PlaneMesh_7rwi2"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_uo40l"]
albedo_color = Color(0, 0.964706, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fn1al"]

[sub_resource type="BoxMesh" id="BoxMesh_u7l4g"]

[sub_resource type="Animation" id="Animation_phb1p"]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-81.3985, 1.85803, 26.7153), Vector3(-80.4045, 1.85803, 29.5232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ombp5"]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-80.4045, 1.85803, 29.5232), Vector3(-81.3985, 1.85803, 26.7153)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_ut1r8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-80.4045, 1.85803, 29.5232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1gmyl"]
_data = {
"Close": SubResource("Animation_phb1p"),
"Open": SubResource("Animation_ombp5"),
"RESET": SubResource("Animation_ut1r8")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_2g2dt")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -92.527, 0.082736, -2.47228)

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftHand" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"

[node name="LeftHand" parent="XROrigin3D/LeftHand" instance=ExtResource("2_c4kmf")]

[node name="FunctionPickup" parent="XROrigin3D/LeftHand" instance=ExtResource("3_52hyq")]

[node name="FunctionTeleport" parent="XROrigin3D/LeftHand" instance=ExtResource("4_8ewl6")]

[node name="RightHand" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(0.999936, -0.00898236, 0.0068461, 0.00899957, 0.999956, -0.00248775, -0.00682346, 0.00254919, 0.999973, 0.5, 1, -0.55)
tracker = &"right_hand"

[node name="RightHand" parent="XROrigin3D/RightHand" instance=ExtResource("3_63v2b")]

[node name="FunctionPickup" parent="XROrigin3D/RightHand" instance=ExtResource("3_52hyq")]

[node name="FunctionPointer" parent="XROrigin3D/RightHand" instance=ExtResource("6_qhtc8")]

[node name="PlayerBody" parent="XROrigin3D" instance=ExtResource("6_edw0r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.729697, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.659411, 0.751782, 0, -0.751782, 0.659411, 0, 2.76418, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7m1n5")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0)
mesh = SubResource("PlaneMesh_kfrc4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0)
shape = SubResource("BoxShape3D_f3c2q")

[node name="PickableObject" parent="." instance=ExtResource("7_2dyd7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -88.9051, 3.11081, -12.3649)
collision_layer = 5
contact_monitor = true
picked_up_layer = 65540

[node name="MeshInstance3D" type="MeshInstance3D" parent="PickableObject"]
mesh = SubResource("BoxMesh_gcbew")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_0qee3")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PickableObject"]
shape = SubResource("BoxShape3D_vuiey")

[node name="Viewport2Din3D" parent="." instance=ExtResource("8_5rd78")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -79.6151, 5.5564, -0.535841)
scene = ExtResource("9_b1ux2")
viewport_size = Vector2(1145, 642)
transparent = 0

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -81.8838, 0.491945, -26.3646)
disable_mode = 1
collision_layer = 5
collision_mask = 7
monitorable = false
script = ExtResource("8_6njb4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0)
mesh = SubResource("PlaneMesh_7rwi2")
surface_material_override/0 = SubResource("ORMMaterial3D_uo40l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(20, 0, 0, 0, 10, 0, 0, 0, 20, 0, 5.04496, 0)
shape = SubResource("BoxShape3D_fn1al")

[node name="Steve" parent="." instance=ExtResource("11_iiidb")]
transform = Transform3D(0.344449, 0, 0, 0, 0.344449, 0, 0, 0, 0.344449, -15.9579, 0.5, 8.17642)

[node name="ColorCube" parent="." instance=ExtResource("16_8ceiq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -48.4856, 3.27842, 0)
visible = false
collision_layer = 5242881

[node name="room" parent="." instance=ExtResource("14_50kk4")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -80.0861, 0.5, 37.9968)

[node name="Door" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -80.4045, 1.85803, 29.5232)
collision_layer = 5242880
freeze = true
script = ExtResource("15_33m2j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Door"]
transform = Transform3D(1.509, 0, 0, 0, 4.02, 0, 0, 0, 0.6547, 0.314, 0.582, -1.833)
layers = 2
mesh = SubResource("BoxMesh_u7l4g")

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.87435)
depth = 1.25
polygon = PackedVector2Array(1.06697, 2.57572, -0.418304, 2.57572, -0.40123, -1.40209, 1.10112, -1.36795)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door"]
libraries = {
"": SubResource("AnimationLibrary_1gmyl")
}

[node name="ColorLock" parent="." instance=ExtResource("16_jctg4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -87.4579, 0.5, 9.17021)

[node name="ColorLock2" parent="." instance=ExtResource("16_jctg4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -83.9373, 0.5, 9.17021)

[node name="ColorLock3" parent="." instance=ExtResource("16_jctg4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -90.1679, 0.5, 9.17021)

[node name="Rag" parent="." instance=ExtResource("17_vdcp1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.54939, 0.0685053, -7.91439)

[connection signal="dropped" from="PickableObject" to="Viewport2Din3D" method="_on_pickable_object_dropped"]
[connection signal="body_entered" from="Area3D" to="PickableObject" method="_on_area_3d_body_entered"]
[connection signal="toggled" from="ColorLock" to="Door" method="_on_color_lock_toggled"]
[connection signal="toggled" from="ColorLock2" to="Door" method="_on_color_lock_2_toggled"]
[connection signal="toggled" from="ColorLock3" to="Door" method="_on_color_lock_3_toggled"]

[editable path="ColorCube"]
